<?xml version="1.0" encoding="utf-8"?>
<com.example.movieswatch.view.viewpods.MovieDetailStorylineViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/merriweather_regular"
            android:text="@string/story_line"
            android:textColor="@color/fade_background"
            android:textSize="@dimen/standard_heading" />

        <TextView
            android:id="@+id/storyLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/detail_overview"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="14dp">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="20dp"
            android:background="@color/golden_rod"
            app:cardElevation="8dp">

            <LinearLayout
                android:id="@+id/lnlPlayTrailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/golden_rod">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweather_regular"
                    android:text="@string/play_trailer"
                    android:textColor="@color/white"
                    android:textSize="16dp">

                </TextView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/background">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweather_regular"
                    android:text="@string/rate_movie"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="16dp">

                </TextView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</com.example.movieswatch.view.viewpods.MovieDetailStorylineViewPod>