<?xml version="1.0" encoding="utf-8"?>
<com.example.movieswatch.view.viewpods.MovieDetailAboutFilmViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/standard_margin"
   >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/standard_margin"
            android:gravity="left"
            >
            <TextView
                android:id="@+id/originalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_title"
                android:textColor="@color/fade_background"
                android:textSize="@dimen/movie_lables"
                >
            </TextView>
            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/fade_background"
                android:textSize="@dimen/movie_lables"
                android:layout_marginTop="@dimen/standard_margin"

                >
            </TextView>
            <TextView
                android:id="@+id/production"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/production"
                android:textColor="@color/fade_background"
                android:textSize="@dimen/movie_lables"
                android:layout_marginTop="@dimen/standard_margin"

                >
            </TextView>
            <TextView
                android:id="@+id/premiere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premiere"
                android:textColor="@color/fade_background"
                android:textSize="@dimen/movie_lables"
                android:layout_marginTop="@dimen/standard_margin"
                >
            </TextView>
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/fade_background"
                android:textSize="@dimen/movie_lables"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/standard_margin"
            android:gravity="center">
            <TextView
                android:id="@+id/originalTitleTxT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_title"
                android:textColor="@color/white"
                android:textSize="@dimen/movie_lables"
                android:layout_gravity="start"
                >
            </TextView>
            <TextView
                android:id="@+id/typeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/white"
                android:textSize="@dimen/movie_lables"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/standard_margin"

                >
            </TextView>
            <TextView
                android:id="@+id/productionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/production"
                android:textColor="@color/white"
                android:textSize="@dimen/movie_lables"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/standard_margin"
                >
            </TextView>
            <TextView
                android:id="@+id/premiereTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/movie_lables"
                android:text="@string/premiere"
                android:textColor="@color/white"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/standard_margin"
                >
            </TextView>
            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="@dimen/movie_lables"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                >
            </TextView>
        </LinearLayout>

</com.example.movieswatch.view.viewpods.MovieDetailAboutFilmViewPod>